--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/assets/iconFonasa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Proyecto Ley de Urgencia" />
+    <meta name="description" content="LectorQr" />
     <meta name="author" content="Fonasa" />
     <meta name="keywords" content="Fonasa, Ley de Urgencia, Proyecto" />
     <meta name="language" content="Spanish" />
